--- a/host_vars/vpc.ansibled.yml
+++ b/host_vars/vpc.ansibled.yml
@@ -26,7 +26,7 @@ vpc_security_groups:
   - name: vpc
     description: "Allow internal traffic in the VPC"
     rules:
-      - proto: all
+      - proto: tcp
         group_name: vpc
         ports: all
   - name: allow-public-ssh
